--- a/index.html
+++ b/index.html
@@ -31,21 +31,21 @@
       </section>
 
         <section id="featured">
+          <h2>Featured Work</h2>
           <div class="full-width container">
-            <h2>Featured Work</h2>
-            <div class="third-width box clock">
+            <div class="third-width clock">
               <img src="img/catclock2.16.png" alt="cat clock" class="img-responsive" />
               <h3>LOL Cat Clock</h3>
               <a href="#"><p>https://github.com/BritishPandaChick/skillcrush-courses/tree/master/lolcatclock</p></a>
             </div>
 
-            <div class="third-width box tribute-page">
+            <div class="third-width tribute-page">
               <img src="img/tributepage2.16.png" alt="tribute page" class="img-responsive" />
               <h3>Tribute Page</h3>
               <a href="#"><p>https://github.com/BritishPandaChick/tribute-page</p></a>
             </div>
 
-            <div class="third-width box magic-ball">
+            <div class="third-width magic-ball">
               <img src="img/magic8ball2.16.png" alt="magic 8 ball" class="img-responsive" />
               <h3>Magic 8 Ball</h3>
               <a href="#"><p>https://github.com/BritishPandaChick/skillcrush-courses/tree/master/skillcrush-jsjquery/magic8ball</p></a>
