Update responsive css file code

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Sarah Bartley Grow With Google Portfolio Site</title>
     <link rel="stylesheet" media="screen and (min-width: 1025px)" href="css/style.css">
     <link rel="stylesheet" media="screen and (max-width: 640px)" href="css/mobile.css">
-    <link rel="stylesheet" media="screen and (max-width: 1024px)" href="css/responsive.css">
+    <link rel="stylesheet" media="screen and (min-width: 641px) and (max-width: 1024px)" href="css/responsive.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Over+the+Rainbow" rel="stylesheet">
@@ -53,6 +53,7 @@
           </div>
         </section>
       </main>
+
       <footer>
         <div class="full-width">
           <div class="half-width">
