Add links to href attributes in index.html

--- a/index.html
+++ b/index.html
@@ -36,19 +36,19 @@
             <div class="third-width clock">
               <img src="img/catclock2.16.png" alt="cat clock" class="img-responsive" />
               <h3>LOL Cat Clock</h3>
-              <a href="#"><p>https://github.com/BritishPandaChick/skillcrush-courses/tree/master/lolcatclock</p></a>
+              <a href="https://github.com/BritishPandaChick/skillcrush-courses/tree/master/lolcatclock"><p>https://github.com/BritishPandaChick/skillcrush-courses/tree/master/lolcatclock</p></a>
             </div>
 
             <div class="third-width tribute-page">
               <img src="img/tributepage2.16.png" alt="tribute page" class="img-responsive" />
               <h3>Tribute Page</h3>
-              <a href="#"><p>https://github.com/BritishPandaChick/tribute-page</p></a>
+              <a href="https://github.com/BritishPandaChick/tribute-page"><p>https://github.com/BritishPandaChick/tribute-page</p></a>
             </div>
 
             <div class="third-width magic-ball">
               <img src="img/magic8ball2.16.png" alt="magic 8 ball" class="img-responsive" />
               <h3>Magic 8 Ball</h3>
-              <a href="#"><p>https://github.com/BritishPandaChick/skillcrush-courses/tree/master/skillcrush-jsjquery/magic8ball</p></a>
+              <a href="https://github.com/BritishPandaChick/skillcrush-courses/tree/master/skillcrush-jsjquery/magic8ball"><p>https://github.com/BritishPandaChick/skillcrush-courses/tree/master/skillcrush-jsjquery/magic8ball</p></a>
             </div>
           </div>
         </section>
