Add lang to HTML tag. Fix link to Google Fonts

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <title>Sarah Bartley Grow With Google Portfolio Site</title>
@@ -27,40 +27,39 @@
 
     <main>
       <section id="header-image">
-        <img src="img/computer.jpg" alt="computer" class="img-responsive"/>
+        <img src="img/computer.jpg" alt="computer" class="img-responsive" />
       </section>
 
-        <section id="featured">
-          <h2>Featured Work</h2>
-          <div class="full-width container">
-            <div class="third-width clock">
-              <img src="img/catclock2.16.png" alt="cat clock" class="img-responsive" />
-              <h3>LOL Cat Clock</h3>
-              <a href="https://github.com/BritishPandaChick/skillcrush-courses/tree/master/lolcatclock"><p>https://github.com/BritishPandaChick/skillcrush-courses/tree/master/lolcatclock</p></a>
-            </div>
-
-            <div class="third-width tribute-page">
-              <img src="img/tributepage2.16.png" alt="tribute page" class="img-responsive" />
-              <h3>Tribute Page</h3>
-              <a href="https://github.com/BritishPandaChick/tribute-page"><p>https://github.com/BritishPandaChick/tribute-page</p></a>
-            </div>
-
-            <div class="third-width magic-ball">
-              <img src="img/magic8ball2.16.png" alt="magic 8 ball" class="img-responsive" />
-              <h3>Magic 8 Ball</h3>
-              <a href="https://github.com/BritishPandaChick/skillcrush-courses/tree/master/skillcrush-jsjquery/magic8ball"><p>https://github.com/BritishPandaChick/skillcrush-courses/tree/master/skillcrush-jsjquery/magic8ball</p></a>
-            </div>
+      <section id="featured">
+        <h2>Featured Work</h2>
+        <div class="full-width container">
+          <div class="third-width clock">
+            <img src="img/catclock2.16.png" alt="cat clock" class="img-responsive" />
+            <h3>LOL Cat Clock</h3>
+            <a href="https://github.com/BritishPandaChick/skillcrush-courses/tree/master/lolcatclock"><p>https://github.com/BritishPandaChick/skillcrush-courses/tree/master/lolcatclock</p></a>
           </div>
-        </section>
-      </main>
 
-      <footer>
-        <div class="full-width">
-          <div class="half-width">
-            <p>Copyright 2018 Sarah Bartley</p>
+          <div class="third-width tribute-page">
+            <img src="img/tributepage2.16.png" alt="tribute page" class="img-responsive" />
+            <h3>Tribute Page</h3>
+            <a href="https://github.com/BritishPandaChick/tribute-page"><p>https://github.com/BritishPandaChick/tribute-page</p></a>
+          </div>
+
+          <div class="third-width magic-ball">
+            <img src="img/magic8ball2.16.png" alt="magic 8 ball" class="img-responsive" />
+            <h3>Magic 8 Ball</h3>
+            <a href="https://github.com/BritishPandaChick/skillcrush-courses/tree/master/skillcrush-jsjquery/magic8ball"><p>https://github.com/BritishPandaChick/skillcrush-courses/tree/master/skillcrush-jsjquery/magic8ball</p></a>
           </div>
         </div>
-      </footer>
-    </div>
+      </section>
+    </main>
+
+    <footer>
+      <div class="full-width">
+        <div class="half-width">
+          <p>Copyright 2018 Sarah Bartley</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
