Delete section tags for header-image. Move header-image id as attribute for img tag

--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
     </header>
 
     <main>
-      <section id="header-image">
-        <img src="img/computer.jpg" alt="computer" class="img-responsive" />
-      </section>
-
+      <img src="img/computer.jpg" alt="computer" class="img-responsive" id="header-image" />
+  
       <section id="featured">
         <h2>Featured Work</h2>
         <div class="full-width container">
